fixed spacing on suites page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,5 +34,5 @@
  }
 
  .slick-dots {
-  top:86vh;
+  top:95%;
 }
